# mpgp

./: CMakeLists.txt  HealMove.h  Move.cpp  Move.h  MoveSet.cpp  Movedex.cpp  Moveset.h  Pokedex.cpp  Pokedex.h  Pokemon.cpp  Pokemon.h  PokemonParty.cpp  PokemonParty.h  README.md  Trainer.cpp  Trainer.h  Type.cpp  Type.h  aa.txt  add_pokemon.cpp  battle  battle.cpp  battleV2  battle_function.cpp  compile.txt  damage_check  delete  delete.cpp  game  health_damage.cpp  lmao.cpp  main  main.cpp  mainA  move_check  move_check.cpp  move_check_pokemon  move_damage.cpp  move_damage_check  move_main.cpp  (+15 more)
Type/: Type.h
pokemon/: CMakeLists.txt
pokemon/game/: CMakeLists.txt
pokemon/game/include/: HealMove.h  Limits.h  PokemonParty.h  Trainer.h
pokemon/game/src/: HealMove.cpp  Limits.cpp  Pokedex.cpp  Pokemon.cpp  PokemonParty.cpp  Trainer.cpp
pokemon/run/: CMakeLists.txt  battle_function.cpp  main.cpp  new_main.cpp  pokemon_storage.cpp  save_game.txt
tests/: test.cpp
